My first commit

--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -18,10 +18,12 @@ session:
 	expiration: 14 days
 
 
-services:
-	router: App\RouterFactory::createRouter
-	- App\Models\ArticleModel
-	- App\Components\IArticleControlFactory
+services:    
+    - App\Models\ArticleModel
+    - App\Models\UserModel
+    - App\Components\IArticleControlFactory
+    router: App\RouterFactory::createRouter
+    authenticator: App\Models\AuthenticatorModel
 
 extensions:
 	dibi: Dibi\Bridges\Nette\DibiExtension22
