--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
 		"php": ">= 5.4.0",
 		"nette/nette": "~2.3.0",
 		"dg/dibi": "dev-master",
-		"o5/grido": "dev-master"
+		"o5/grido": "^2.0",
+		"dibi/dibi": "^2.3",
+		"twbs/bootstrap": "^3.3"
 	}
 }
